root .intenx change to entry point

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TypeScript Practice</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>jg-slide-deck</title>
 </head>
+
 <body>
-    <div id="app">
-        <h1>Check the console! (F12)</h1>
-    </div>
-    <script type="module" src="/src/index.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="/jg-slide-deck/src/main.tsx"></script>
 </body>
+
 </html>
