--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>jg-slide-deck</title>
+
+  <meta property="og:title" content="なるおへ送るジャングリングの方法">
+  <meta property="og:description" content="なるちゃんへ。画面右下の矢印を押すか、キーボードの右矢印キーを押すと進むよ">
 </head>
 
 <body>
