--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>jg-slide-deck</title>
 
   <meta property="og:title" content="なるおへ送るジャングリングの方法">
-  <meta property="og:description" content="なるちゃんへ。画面右下の矢印を押すか、キーボードの右矢印キーを押すと進むよ">
+  <meta property="og:description" content="画面右下の矢印を押すか、キーボードの右矢印キーを押すとページが進むよ。配信に写したら困るようなものはないよ。はやかったら５分位で見終わるよ。">
 </head>
 
 <body>
