コンクリフト起こしたので一旦プッシュ。

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>jg-slide-deck</title>
 
-  <meta property="og:title" content="新米ジャングラーのための最初のガイド">
-  <meta property="og:description" content="右下の矢印かキーボードの右キーで進むよ。配信に映ってもマズいものは無いよ。5分で読めるよ。">
+  <meta property="og:title" content="なるおへ送るジャングリングの方法">
+  <meta property="og:description" content="なるちゃんへ。画面右下の矢印を押すか、キーボードの右矢印キーを押すと進むよ">
 </head>
 
 <body>
